--- a/src/gex-viewer.html
+++ b/src/gex-viewer.html
@@ -263,7 +263,7 @@
 
             </div>
             <app-toolbar class="data">
-              <div main-title>Normals</div>
+              <div main-title>Normatives</div>
             </app-toolbar>
             <div class="series">
               <template is="dom-repeat" items="[[dataGe]]">
@@ -277,7 +277,7 @@
               </template>
             </div>
             <div class="label">
-              Copyright (c) 2017 FNNDSC, BCH. All rights reserved.</iron-icon>
+              Copyright (c) 2017 FNNDSC, BCH.</iron-icon>
             </div>
         </div>
     </gex-panel>
@@ -473,50 +473,7 @@
         return {
           dataBch: {
             type: Array,
-            value: [
-              {
-                details: {
-                  series: {
-                    uid: 1,
-                    description: 'Sag FLAIR CUBE',
-                    date: '2011-05-20',
-                    files: '159',
-                    preview: {
-                      blob: null,
-                      url: '../images/demo/sag.jpg',
-                    },
-                  },
-                },
-              },
-              {
-                details: {
-                  series: {
-                    uid: 0,
-                    description: 'Borjan SAG T2',
-                    date: '2013-05-27',
-                    files: '176',
-                    preview: {
-                      blob: null,
-                      url: '../images/demo/sag.jpg',
-                    },
-                  },
-                },
-              },
-              {
-                details: {
-                  series: {
-                    uid: 2,
-                    description: 'SAG 3D IR',
-                    date: '2012-12-03',
-                    files: '90',
-                    preview: {
-                      blob: null,
-                      url: '../images/demo/sag.jpg',
-                    },
-                  },
-                },
-              },
-            ],
+            value: [],
           },
           dataStatusBch: {
             type: String,
@@ -757,16 +714,6 @@
 
       _isSelected(data) {
         return !(data === undefined || !data.data);
-      }
-
-      _isReadyAndNotSelected(status, data) {
-        if(sessionStorage.getItem('username') === 'demo') {
-          return false;
-        }
-
-        const ready = this._isReady(status);
-        const selected = this._isSelected(data);
-        return ready && !selected;
       }
 
       _activeBchChanged(active) {
