--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
     <title>RaV</title>
-    <meta name="description" content="My App description">
+    <meta name="description" content="Radiology Viewer">
 
     <base href="/">
 
@@ -73,7 +73,7 @@
 
     <!-- Load your application shell -->
     <link rel="import" href="bower_components/web-animations-js/web-animations-next-lite.min.js">
-    <link rel="import" href="src/gex-app.html">
+    <link rel="import" href="src/ra-app.html">
 
     <!-- Add any global styles for body, document, etc. -->
     <style>
@@ -87,7 +87,7 @@
     </style>
   </head>
   <body>
-    <gex-app></gex-app>
+    <ra-app></ra-app>
     <noscript>
       Please enable JavaScript to view this website.
     </noscript>
