--- a/src/gex-login.html
+++ b/src/gex-login.html
@@ -127,7 +127,7 @@
         <section>
           <div>
             <br>
-            New to <a href="https://github.com/FNNDSC/gex">GEX</a>? <a href="https://github.com/FNNDSC">Register</a> for an account.
+            New to <a href="https://github.com/FNNDSC/gex">RaV</a>? <a href="https://github.com/FNNDSC">Register</a> for an account.
           </div>
         </section>
 
