--- a/src/elements/image-controls.html
+++ b/src/elements/image-controls.html
@@ -83,7 +83,7 @@
               </paper-listbox>
             </paper-dropdown-menu>
         </div>
-        <div class="item">
+        <!-- <div class="item">
           <paper-dropdown-menu label="Window Level" selected-item-label="{{windowLevel}}">
               <paper-listbox slot="dropdown-content" selected="{{windowLevelSelected}}">
                 <paper-item label="Default">Default</paper-item>
@@ -92,7 +92,7 @@
                 <paper-item label="Heart">Heart</paper-item>
               </paper-listbox>
             </paper-dropdown-menu>
-        </div>
+        </div> -->
         <div class="item">
           <paper-dropdown-menu label="Color LUT" selected-item-label="{{colorLut}}">
               <paper-listbox slot="dropdown-content" selected="{{colorLutSelected}}">
