--- a/src/elements/viewer-global-controls.html
+++ b/src/elements/viewer-global-controls.html
@@ -6,8 +6,9 @@
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/device-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
-<!-- <link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
+<!-- 
 <link rel="import" href="../../bower_components/iron-icons/image-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/communication-icons.html">
  -->
@@ -158,13 +159,12 @@
         <paper-icon-button class$="{{_isTheaterModeSelected(theaterMode)}}" icon$="{{_isTheaterMode(theaterMode)}}" on-tap="_theaterMode"></paper-icon-button>
       </div>
 
-      <div class="spacer"></div>
+      <div hidden$="[[collapse]]" class="expand">
+        <div class="label">Localizers</div>
+        <paper-icon-button class$="{{_isLocalizerSelected(localizer)}}" icon="editor:border-inner" on-tap="_localizer"></paper-icon-button>
+      </div>
 
-      <!-- <div class="close expand">
-        <paper-icon-button id="show" icon$="{{_isCollapsed(collapse)}}" on-tap="_collapse">
-        </paper-icon-button>
-        <div class="spacer"></div>
-      </div> -->
+      <div class="spacer"></div>
     </div>
 
   </template>
@@ -200,6 +200,11 @@
             value: false,
             notify: true,
           },
+          localizer: {
+            type: Boolean,
+            value: false,
+            notify: true,
+          },
         };
       }
 
@@ -222,12 +227,21 @@
         this.set('theaterMode', !this.theaterMode);
       }
 
+
+      _localizer() {
+        this.set('localizer', !this.localizer);
+      }
+
       _isTheaterMode(theaterMode) {
         return theaterMode ? 'icons:fullscreen-exit' : 'icons:fullscreen';
       }
 
       _isTheaterModeSelected(theaterMode) {
         return theaterMode ? 'iron-selected' : '';
+      }
+
+      _isLocalizerSelected(localizer) {
+        return localizer ? 'iron-selected' : '';
       }
     }
     window.customElements.define(ViewerGlobalControls.is, ViewerGlobalControls);
